AUTOMAKE_OPTIONS = subdir-objects

noinst_LIBRARIES = libfreakzfreakz.a

AM_CFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/include/freakz @CONTIKI_CFLAGS@

libfreakzfreakz_a_SOURCES = \
  af/af.c \
  af/af_ep.c \
  af/af_conf.c \
  af/af_conf_tbl.c \
  af/af_rx.c \
  af/af_tx.c \
  aps/aps.c \
  aps/aps_gen.c \
  aps/aps_parse.c \
  aps/aps_retry.c \
  aps/aps_dupe.c \
  aps/aps_bind.c \
  aps/aps_grp.c \
  driver/sim/mac_hw.c \
  driver/sim/sim_drvr.c \
  freakz.c \
  mac/mac.c \
  mac/mac_gen.c \
  mac/mac_parse.c \
  mac/mac_indir.c \
  mac/mac_queue.c \
  mac/mac_start.c \
  mac/mac_reset.c \
  mac/mac_scan.c \
  mac/mac_assoc.c \
  mac/mac_poll.c \
  mac/mac_retry.c \
  misc/buf.c \
  misc/dev_dbg.c \
  misc/misc.c \
  misc/slow_clock.c \
  misc/mem_heap.c \
  nwk/nwk.c \
  nwk/nwk_gen.c \
  nwk/nwk_parse.c \
  nwk/nwk_reset.c \
  nwk/nwk_sync.c \
  nwk/nwk_rte_mesh.c \
  nwk/nwk_rte_disc_tbl.c \
  nwk/nwk_rte_tbl.c \
  nwk/nwk_pend.c \
  nwk/nwk_form.c \
  nwk/nwk_permit_join.c \
  nwk/nwk_neighbor_tbl.c \
  nwk/nwk_rte_tree.c \
  nwk/nwk_brc.c \
  nwk/nwk_disc.c \
  nwk/nwk_join.c \
  nwk/nwk_leave.c \
  nwk/nwk_addr_map.c \
  zcl/zcl.c \
  zcl/zcl_parse.c \
  zcl/zcl_gen.c \
  zcl/zcl_rpt.c \
  zcl/general/zcl_basic.c \
  zcl/general/zcl_on_off.c \
  zcl/general/zcl_id.c \
  zcl/general/zcl_level.c \
  zdo/zdo.c \
  zdo/zdo_nwk_mgr.c \
  zdo/zdo_disc.c \
  zdo/zdo_cfg.c \
  zdo/zdo_gen.c \
  zdo/zdo_parse.c \
  zdo/zdo_bind_mgr.c
