nobase_include_HEADERS = \
  freakz/af.h \
  freakz/aps.h \
  freakz/buf.h \
  freakz/constants.h \
  freakz/contiki-conf.h \
  freakz/contiki-main.h \
  freakz/dev_dbg.h \
  freakz/freakz.h \
  freakz/mac.h \
  freakz/mac_hw.h \
  freakz/mem_heap.h \
  freakz/mem_pool.h \
  freakz/misc.h \
  freakz/nwk.h \
  freakz/sim_drvr.h \
  freakz/slow_clock.h \
  freakz/types.h \
  freakz/zcl.h \
  freakz/zcl_basic.h \
  freakz/zcl_grp.h \
  freakz/zcl_id.h \
  freakz/zcl_level.h \
  freakz/zcl_on_off.h \
  freakz/zcl_scenes.h \
  freakz/zdo.h